# english-conversation-practice-app

./: README.md  pyproject.toml  start_app.sh
data/: business_english_mvp_3cols.csv
src/english_conversation_practice_app/: __init__.py  app.py
src/english_conversation_practice_app/components/: __init__.py  evaluation.py  tts.py  voice_input.py
src/english_conversation_practice_app/utils/: __init__.py  csv_loader.py
tests/: test_csv_loader.py  test_csv_question_display.py  test_evaluation.py  test_tts.py  test_voice_input.py  test_voice_streamlit.py
